[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-priority-pilot"
version = "1.0.0"
description = "OpenEnv environment for code review prioritization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "openai>=2.7.2",
    "requests==2.31.0",
    "huggingface_hub==0.20.3",
    "openenv-core>=0.2.0",   # kept for validator – not installed via pip
]

[project.scripts]
server = "server.app:main"
inference = "inference:main"